Two forms for log in
* Adjusted some core components
* Now creates user and userinfo together

--- a/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/app.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main class="w-screen h-[3000px] overflow-hidden">
+<main class="w-screen h-[3000px]">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
