--- a/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
@@ -23,7 +23,7 @@
       </div>
       <div class="bg-white w-10 h-10 p-1 rounded-lg border-black border">
         <a
-          href="/"
+          href="/shop"
           class="w-full h-full"
         >
           <img src="/images/search_icon.png" alt="Home Icon" class="w-full h-full"/>
@@ -37,7 +37,7 @@
           class = "font-bold text-white bg-gray-950 flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
           >
           <div class="text-ellipsis overflow-hidden whitespace-nowrap">
-            <%= @current_user_info.username %>'s Shop
+            My Shop
           </div>
 
         </.link>
