--- a/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
@@ -12,11 +12,11 @@
     </script>
   </head>
   <body>
-    <ul class="relative z-10 flex items-center gap-4 justify-start text-center bg-black pb-4 pt-4 pr-4">
+    <ul class="relative w-full z-10 flex items-center gap-4 justify-start text-center bg-white pb-4 pt-4 pr-4">
       <div class="">
         <a
           href="/"
-          class="font-bold text-white flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
+          class="font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
         >
           Home
         </a>
@@ -24,7 +24,7 @@
       <div class="">
         <a
           href="/shop"
-          class="font-bold text-white flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
+          class="font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
         >
           Search
         </a>
@@ -34,9 +34,9 @@
         <a>
           <.link
           href={~p"/shop/#{@current_user_info.username}"}
-          class = "font-bold text-white flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
+          class = "font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
           >
-          <div class="text-ellipsis text-white overflow-hidden whitespace-nowrap">
+          <div class="text-ellipsis text-black overflow-hidden whitespace-nowrap">
             My Shop
           </div>
 
@@ -46,7 +46,7 @@
         <a>
           <.link
             href={~p"/users/settings"}
-            class="font-bold text-white flex justify-center items-center p-4 w-24 h-10 rounded-lg"
+            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
           >
             Settings
           </.link>
@@ -55,7 +55,7 @@
           <.link
             href={~p"/users/log_out"}
             method="delete"
-            class="font-bold text-white border border-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
+            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
           >
             Log out
           </.link>
@@ -64,7 +64,7 @@
         <a>
           <.link
             href={~p"/users/register"}
-            class="font-bold text-white flex justify-center items-center p-4 w-24 h-10 rounded-lg"
+            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
           >
             Register
           </.link>
@@ -72,7 +72,7 @@
         <a>
           <.link
             href={~p"/users/log_in"}
-            class="font-bold text-black bg-white border border-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
+            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
           >
             Log in
           </.link>
