--- a/ecommercewebsite/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
@@ -5,22 +5,53 @@
     <body>
     <div class = "relative w-full h-2/5 flex justify-center bg-black">
         <%= if @show_edit_button do %>
-        <div class="absolute justify-center items-center top-0 right-0 bg-black w-16 h-8 m-3 p-1 text-white rounded-full">
-            <span class="items-start align-top m-1 text-sm font-bold text-white dark:text-gray-300">Edit</span>
-            <label class="relative inline-flex items-center cursor-pointer">
-            <%= if @edit_mode do %>
-                <input type="checkbox" phx-click="toggle_edit_mode" value="" class="sr-only peer" checked>
-            <% else %>
-                <input type="checkbox" phx-click="toggle_edit_mode" value="" class="sr-only peer">
-            <% end %>
-            <div class="w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600">
+            <div class="absolute justify-center items-center top-0 right-0 bg-black w-16 h-8 m-3 p-1 text-white rounded-full">
+                <span class="items-start align-top m-1 text-sm font-bold text-white dark:text-gray-300">Edit</span>
+                <label class="relative inline-flex items-center cursor-pointer">
+                <%= if @edit_mode do %>
+                    <input type="checkbox" phx-click="toggle_edit_mode" value="" class="sr-only peer" checked>
+                <% else %>
+                    <input type="checkbox" phx-click="toggle_edit_mode" value="" class="sr-only peer">
+                <% end %>
+                <div class="w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600">
+                </div>
+                </label>
+
             </div>
-            </label>
-
-        </div>
         <% end %>
+        <%= if @current_user do %> 
+            <div class="">
+                <button class="absolute justify-center text-center items-center top-0 left-0 bg-white font-bold text-black flex m-2 p-4 min-w-24 max-w-48 h-10 rounded-lg" type="button" data-drawer-backdrop="false" data-drawer-target="drawer" data-drawer-show="drawer" aria-controls="drawer">
+                Cart
+                </button>
+                </div>
+            
+                <div id="drawer" class="fixed top-0 left-0 z-40 h-screen w-[20%] p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800 border" tabindex="-1" aria-labelledby="drawer-label">
+                <h5 id="drawer-label" class="w-full items-center inline-flex mb-4 text-base font-semibold text-gray-500 dark :text-gray-400">
+                    YOUR CART
+                </h5>
+                <button type="button" data-drawer-hide="drawer" aria-controls="drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 right-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                    </svg>
+                    <span class="sr-only">Close menu</span>
+                </button>
+                <div class="overflow-y-auto max-h-[80%]">
+                    <%= for {cart, post} <- Enum.zip(@current_cart, @cart_posts) do %>
+                    <img src = {post.img_file_name} />
+                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Quantity: <%= cart.quantity %></h1>
+                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Price: <%= post.price %></h1>
+                    <% end %>
+                </div>
 
-
+                
+                <div class="flex absolute inset-x-0 bottom-8 justify-center items-center text-center">
+                    <a href="#" class="w-full inline-flex justify-center items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Check Out<svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg></a>
+                </div>
+            </div>
+        <% end %>
         <div class = "w-4/5">
         <div class = "w-full justify-center flex break-all" >
             <h1 class = "w-full flex text-white font-semibold text-8xl justify-center items-center align-middle text-center mt-64">
@@ -103,7 +134,7 @@
                     </button>
 
                     <.modal id={"update-form-#{post.id}"}>
-                        <.form for={@items_form} phx-change="validate_new_item" phx-submit="update_item"
+                        <.form for={@items_form} phx-change="validate_old_item" phx-submit="update_item"
                         class = "mt-[5%] ml-[5%] font-medium text-6xl w-3/5" enctype="multipart/form-data">
                             <.input field={@items_form[:old_img_file_name]} value = {post.img_file_name}  class="hidden"/>
                             <.input field={@items_form[:id]} value = {post.id}  class="hidden"/>
@@ -134,18 +165,7 @@
                             <p class="leading-relaxed"><%= post.description %></p>
                             <div class="items-center align-bottom flex flex-row mt-6">
                                 <span class="title-font font-medium text-2xl text-gray-900">$<%= post.price %></span>
-                                <div class="ml-44 flex w-32 h-1/2">
-                                    <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent">
-                                    <button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
-                                        <span class="m-auto text-2xl font-thin">−</span>
-                                    </button>
-                                    <input class="outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700" value="0" />
-                                    <button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
-                                    <span class="m-auto text-2xl font-thin">+</span>
-                                    </button>
-                                    </div>
-                                </div>
-                                <button class="flex h-1/2 ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Add to Cart</button>
+                                <button phx-click="add_to_cart" phx-value-item_id={post.id} class="flex h-1/2 ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Add to Cart</button>
                             </div>
                         </div>
                         </div>
@@ -178,5 +198,4 @@
         </button>
         </div>
     </div>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     </body>
