--- a/ecommercewebsite/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/live/shop_live/shop_live.html.heex
@@ -19,39 +19,56 @@
 
             </div>
         <% end %>
-        <%= if @current_user do %> 
-            <div class="">
-                <button class="absolute justify-center text-center items-center top-0 left-0 bg-white font-bold text-black flex m-2 p-4 min-w-24 max-w-48 h-10 rounded-lg" type="button" data-drawer-backdrop="false" data-drawer-target="drawer" data-drawer-show="drawer" aria-controls="drawer">
-                Cart
-                </button>
-                </div>
-            
-                <div id="drawer" class="fixed top-0 left-0 z-40 h-screen w-[20%] p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800 border" tabindex="-1" aria-labelledby="drawer-label">
-                <h5 id="drawer-label" class="w-full items-center inline-flex mb-4 text-base font-semibold text-gray-500 dark :text-gray-400">
-                    YOUR CART
-                </h5>
-                <button type="button" data-drawer-hide="drawer" aria-controls="drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 right-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                    </svg>
-                    <span class="sr-only">Close menu</span>
-                </button>
-                <div class="overflow-y-auto max-h-[80%]">
-                    <%= for {cart, post} <- Enum.zip(@current_cart, @cart_posts) do %>
-                    <img src = {post.img_file_name} />
-                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Quantity: <%= cart.quantity %></h1>
-                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Price: <%= post.price %></h1>
-                    <% end %>
-                </div>
-
-                
-                <div class="flex absolute inset-x-0 bottom-8 justify-center items-center text-center">
-                    <a href="#" class="w-full inline-flex justify-center items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Check Out<svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                </svg></a>
-                </div>
+        <div class="">
+            <button class="absolute justify-center text-center items-center top-0 left-0 bg-white font-bold text-black flex m-2 p-4 min-w-24 max-w-48 h-10 rounded-lg" type="button" data-drawer-backdrop="false" data-drawer-target="drawer" data-drawer-show="drawer" aria-controls="drawer">
+            Cart
+            </button>
             </div>
-        <% end %>
+        
+            <div id="drawer" class="fixed top-0 left-0 z-40 h-screen w-[30%] p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800 border" tabindex="-1" aria-labelledby="drawer-label">
+            <h5 id="drawer-label" class="w-full items-center inline-flex mb-4 text-base font-semibold text-gray-500 dark :text-gray-400">
+                YOUR CART
+            </h5>
+            <button type="button" data-drawer-hide="drawer" aria-controls="drawer" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 right-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                </svg>
+                <span class="sr-only">Close menu</span>
+            </button>
+            <div class="overflow-y-auto max-h-[80%]">
+                <%= for {cart, post} <- Enum.zip(@current_cart, @cart_posts) do %>
+                <div class="flex flex-row w-[90%] items-center mt-6 bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+                    <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src={post.img_file_name}>
+                    <div class="flex flex-col justify-between p-4 leading-normal">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white break-all"><%= post.item_name %></h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 break-all"><%= post.description %></p>  
+                        <div class="flex flex-row items-center gap-10">
+                            <div class="flex w-32 h-1/2">
+                                <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent">
+                                <button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+                                    <span class="m-auto text-2xl font-thin">−</span>
+                                </button>
+                                <input class="outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700" value="1" />
+                                <button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+                                <span class="m-auto text-2xl font-thin">+</span>
+                                </button>
+                                </div>
+                            </div>
+                            <p class="font-normal text-gray-700 dark:text-gray-400">$<%= post.price %></p>  
+                        </div>
+
+                    </div>
+                </div>
+                <% end %>
+            </div>
+
+            
+            <div class="flex absolute inset-x-0 bottom-8 justify-center items-center text-center">
+                <a href="#" class="w-full inline-flex justify-center items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Check Out<svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg></a>
+            </div>
+        </div>
         <div class = "w-4/5">
         <div class = "w-full justify-center flex break-all" >
             <h1 class = "w-full flex text-white font-semibold text-8xl justify-center items-center align-middle text-center mt-64">
@@ -88,7 +105,6 @@
                 </.form>
             <% end %>
         </div>
-
 
         </div>
     </div>
@@ -154,18 +170,21 @@
                 <% end %>
                 <div class="w-full h-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
                     <section class="w-full h-full text-gray-700 body-font overflow-hidden bg-white">
-                    <div class="w-full h-full container px-5 pt-24 pb-12 mx-auto">
+                    <div class="w-full h-full container px-5 pt-24 pb-12 mx-auto items-start">
                         <div class="h-full lg:w-4/5 mx-auto flex flex-wrap">
-                        <div class = "h-3/4 max-w-full">
-                            <img src = {post.img_file_name} class = "h-auto max-w-full rounded-t-lg p-6"/>
+                        <div class = "flex h-3/6 max-w-full">
+                            <img src = {post.img_file_name} class = "object-contain h-full w-full rounded-t-lg p-6"/>
                         </div>
-                        <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
-                            <h2 class="text-sm title-font text-gray-500 tracking-widest"><%= @shop_title %></h2>
-                            <h1 class="text-gray-900 text-3xl title-font font-medium mb-1"><%= post.item_name %></h1>
-                            <p class="leading-relaxed"><%= post.description %></p>
-                            <div class="items-center align-bottom flex flex-row mt-6">
+                        <div class="justify-between flex flex-col lg:w-1/2 w-full h-[40%] lg:pl-10 lg:py-6 mt-6 lg:mt-0">
+                            <div class="self-start">
+                                <h2 class="text-sm title-font text-gray-500 tracking-widest"><%= @shop_title %></h2>
+                                <h1 class="text-gray-900 text-3xl title-font font-medium mb-1"><%= post.item_name %></h1>
+                                <p class="leading-relaxed break-all"><%= post.description %></p>
+                            </div>
+
+                            <div class="self-end flex w-full mt-6">
                                 <span class="title-font font-medium text-2xl text-gray-900">$<%= post.price %></span>
-                                <button phx-click="add_to_cart" phx-value-item_id={post.id} class="flex h-1/2 ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Add to Cart</button>
+                                <button phx-click="add_to_cart" phx-value-item_id={post.id} class="flex h-full ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Add to Cart</button>
                             </div>
                         </div>
                         </div>
@@ -197,5 +216,26 @@
             </svg>
         </button>
         </div>
+
+    <%= if @show_alert  do %>
+        <div class = "fixed top-0 right-0 z-40">
+            <div id="alert-1" class="flex items-center p-4 mb-4 text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
+                <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                </svg>
+                <span class="sr-only">Info</span>
+                <div class="ml-3 text-sm font-medium">
+                <%= @alert_message %>
+                </div>
+                <button phx-click="dismiss_alert" type="button" class="ml-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-1" aria-label="Close">
+                    <span class="sr-only">Close</span>
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    <% end %>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.js"></script>
     </body>
