--- a/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/app.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main class="w-screen h-[3000px]">
+<main class="w-screen h-screen">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
