--- a/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
+++ b/ecommercewebsite/lib/ecommercewebsite_web/components/layouts/root.html.heex
@@ -12,75 +12,56 @@
     </script>
   </head>
   <body>
-    <ul class="relative w-full z-10 flex items-center gap-4 justify-start text-center bg-white pb-4 pt-4 pr-4">
-      <div class="">
-        <a
-          href="/"
-          class="font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
-        >
-          Home
+    <nav class="bg-white border-gray-200 dark:bg-gray-900">
+      <div class="max-w-screen flex flex-wrap items-center justify-between mx-auto p-4 ml-4 mr-4">
+      <div class ="flex ">
+        <a href="/" class="flex items-center">
+          <img src="/images/shopping.png" class="h-8 mr-3" alt="Flowbite Logo" />
+          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
         </a>
+        <%= live_render(
+          @conn,
+          EcommercewebsiteWeb.SearchBarLive,
+          id: "searchbar",
+          container: {:div, class: "w-screen h-full"}
+        ) %>
       </div>
-      <div class="">
-        <a
-          href="/shop"
-          class="font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
-        >
-          Search
-        </a>
-      </div>
-
-      <a class = "justify-end ml-auto">
-      <%= if @current_user do %>
-        <a>
-          <.link
-          href={~p"/shop/#{@current_user_info.username}"}
-          class = "font-bold text-black flex justify-center items-center p-4 min-w-24 max-w-48 h-10 rounded-lg"
-          >
-          <div class="text-ellipsis text-black overflow-hidden whitespace-nowrap">
-            My Shop
+      
+        <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-search">
+          <div class="relative mt-3 md:hidden">
+            <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+              <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+              </svg>
+            </div>
+            <input type="text" id="search-navbar" class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
           </div>
-
-        </.link>
-        </a>
-
-        <a>
-          <.link
-            href={~p"/users/settings"}
-            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
-          >
-            Settings
-          </.link>
-        </a>
-        <a>
-          <.link
-            href={~p"/users/log_out"}
-            method="delete"
-            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
-          >
-            Log out
-          </.link>
-        </a>
-      <% else %>
-        <a>
-          <.link
-            href={~p"/users/register"}
-            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
-          >
-            Register
-          </.link>
-        </a>
-        <a>
-          <.link
-            href={~p"/users/log_in"}
-            class="font-bold text-black flex justify-center items-center p-4 w-24 h-10 rounded-lg"
-          >
-            Log in
-          </.link>
-        </a>
-      <% end %>
-      </a>
-    </ul>
+          <ul class="flex flex-col justfiy-center p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+            <%= if @current_user do %>
+            <li>
+              <a href={"/shop/#{@current_user_info.username}"} class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" aria-current="page">My Shop</a>
+            </li>
+            <li>
+              <a href="/users/settings" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Settings</a>
+            </li>
+            <li>
+              <.link href={~p"/users/log_out"} method="delete" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Logout</.link>
+            </li>
+            <% else %>
+            <li>
+              <a href="/" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700" aria-current="page">About</a>
+            </li>
+            <li>
+              <a href="/users/register" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Register</a>
+            </li>
+            <li>
+              <a href="/users/log_in" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Login</a>
+            </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <%= @inner_content %>
   </body>
 
